--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,10 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+#weblogic
+authentication.url=https://icmsuat.icicibank.com/authentication_api/refresh-token
+#authentication.url=http://localhost:9090/authentication/refresh-token
+
 #logging.file.path=C:/MyProjects/Dashboard/Smsa/logs
 # Log file directory and name
 #logging.file.path=/ICMS/weblogic/weblogic12c/weblogic_logs/CMSAPP/new_cmswebServices_logs
