--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #weblogic
-authentication.url=https://icmsuat.icicibank.com/authentication_api/refresh-token
+authentication.url=http://10.11.100.46:8001/authentication_api/refresh-token
 #authentication.url=http://localhost:9090/authentication/refresh-token
 
 #logging.file.path=C:/MyProjects/Dashboard/Smsa/logs
